# OxyClick

./: .gitignore  Cargo.toml  README.MD  build.rs
.github/workflows/: release.yml
config/: config.toml
docs/: TECH.md
src/: app.rs  error.rs  lib.rs  main.rs
src/config/: file.rs  schema.rs
src/core/: mod.rs  model.rs  state.rs  validate.rs
src/engine/: commands.rs  mod.rs  runner.rs  scheduler.rs
src/platform/windows/: focus.rs  hook.rs  hotkey.rs  input.rs  mod.rs
src/ui/: mod.rs  panels.rs  theme.rs  widgets.rs
