[package]
name = "oxyclick"
version = "1.0.0"
edition = "2021"
description = "A Windows-focused mouse and keyboard auto clicker built with Rust."
license = "MIT"
publish = false
build = "build.rs"

[build-dependencies]
image = { version = "0.25.10", default-features = false, features = ["ico"] }
winres = "0.1"

[dependencies]
eframe = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[patch.crates-io]
eframe = { path = "vendor/eframe" }
